# pinstripe

./: CMakeLists.txt  LICENSE  README.md
src/: pinstripe.cc
